<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="1dp"
        android:layout_marginTop="150dp"
        android:text="@string/textView2" />

    <EditText
        android:id="@+id/EMPID1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/EMPID1"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/CompName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"

        android:autofillHints=""
        android:ems="10"
        android:hint="@string/CompName"
        android:minHeight="48dp"
        android:inputType="date" />

    <EditText
        android:id="@+id/ADDRESS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/ADDRESS"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:inputType="date" />

    <Button
        android:id="@+id/ADD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/CCBTNcolor"
        android:text="@string/ADD" />

    <Button
        android:id="@+id/VIEW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="210dp"
        android:layout_marginTop="-49dp"
        android:backgroundTint="@color/CCBTNcolor"
        android:text="@string/VIEW" />




</LinearLayout>